--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 click==8.0.4
-Jinja2==3.0.3
+Jinja2==3.1.1
+pandas==1.4.1
 Requests==2.27.1
 setuptools==60.9.3
-splight-lib==0.2.29
+splight_lib==0.2.33
