added build folder to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@
 # Node artifact files
 node_modules/
 dist/
+build/
 
 # Compiled Java class files
 *.class
@@ -50,4 +51,3 @@ Thumbs.db
 
 # Eggs
 *.egg-info
-
