--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -6,9 +6,7 @@ pipelines:
           name: unit testing
           size: 1x
           script:
-            - python setup.py install
-            - python manage.py migrate
-            - pytest .
+            - JFROG_BOT_USERNAME=$JFROG_BOT_USERNAME JFROG_BOT_PASS=$JFROG_BOT_PASS python setup.py install
           trigger: automatic
   branches:
     master: &shared
