--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -7,6 +7,7 @@ pipelines:
           size: 1x
           script:
             - pip config set global.extra-index-url https://$JFROG_BOT_USERNAME:$JFROG_BOT_PASS@splight.jfrog.io/artifactory/api/pypi/splight/simple
+            - pip install -r requirements.txt
             - python setup.py install
           trigger: automatic
   branches:
@@ -15,10 +16,11 @@ pipelines:
           name: upload library to jfrog
           script:
             - printf "[distutils]\n" >> ~/.pypirc
-            - printf "index-servers=splightlib\n" >> ~/.pypirc
-            - printf "[splightlib]\n" >> ~/.pypirc
-            - printf "repository:https://splight.jfrog.io/artifactory/api/pypi/splight/simple\n" >> ~/.pypirc
+            - printf "index-servers=splighthub\n" >> ~/.pypirc
+            - printf "[splighthub]\n" >> ~/.pypirc
+            - printf "repository:https://splight.jfrog.io/artifactory/api/pypi/splight-local\n" >> ~/.pypirc
             - printf "username=$JFROG_BOT_USERNAME\n" >> ~/.pypirc
             - printf "password=$JFROG_BOT_PASS" >> ~/.pypirc
-            - python setup.py install
+            - python setup.py bdist_wheel upload -r splighthub
+            - rm ~/.pypirc;
     main: *shared
