update pipeline and add tests

--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -9,6 +9,7 @@ pipelines:
             - pip config set global.extra-index-url https://$JFROG_BOT_USERNAME:$JFROG_BOT_PASS@splight.jfrog.io/artifactory/api/pypi/splight/simple
             - pip install -r requirements.txt
             - python setup.py install
+            - pytest .
           trigger: automatic
   branches:
     master: &shared
