--- a/.github/workflows/pr-tests.yml
+++ b/.github/workflows/pr-tests.yml
@@ -15,8 +15,9 @@ jobs:
       JFROG_PASS: ${{secrets.JFROG_PASS}}
     steps:
       - name: Check out repository code
-      - uses: actions/checkout@v3
-      - uses: actions/setup-python@v3
+        uses: actions/checkout@v3
+      - name: Set up Python
+        uses: actions/setup-python@v3
         with:
           python-version: '3.8'
       - run: pip config set global.extra-index-url https://$JFROG_USERNAME:$JFROG_PASS@splight.jfrog.io/artifactory/api/pypi/splight/simple
