--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 # Learn more about .gitignore:
 #     https://www.atlassian.com/git/tutorials/saving-changes/gitignore
 
+*.svars
 # Node artifact files
 node_modules/
 dist/
