--- a/runner/Dockerfile
+++ b/runner/Dockerfile
@@ -6,6 +6,7 @@ ARG JFROG_BOT_PASS
 
 RUN pip config set global.index-url https://$JFROG_BOT_USERNAME:$JFROG_BOT_PASS@splight.jfrog.io/artifactory/api/pypi/splight/simple
 RUN pip install splight-cli==0.1.5
+RUN pip install xgboost
 
 WORKDIR /code
 RUN mkdir /code/.config; cp -R /root/.config/pip /code/.config/pip
