--- a/.github/workflows/pushimage.yml
+++ b/.github/workflows/pushimage.yml
@@ -2,6 +2,7 @@ name: Push ECR image
 on:
   push:
     branches:
+      - integration
       - master
 jobs:
   upload:
@@ -22,9 +23,11 @@ jobs:
       - name: build and push image
         working-directory: ./runner
         run: |
+          BRANCH=${GITHUB_REF##*/}
+          if [[ $BRANCH == "integration" ]]; then export TAG="integration"; fi
           JFROG_BOT_USERNAME=$JFROG_USERNAME JFROG_BOT_PASS=$JFROG_PASS docker-compose build
-          docker tag splight-runner:latest $AWS_ECR/splight-runner:latest
-          docker push $AWS_ECR/splight-runner:latest
+          docker tag splight-runner:latest $AWS_ECR/splight-runner:${TAG:-latest}
+          docker push $AWS_ECR/splight-runner:${TAG:-latest}
         env:
           JFROG_USERNAME: ${{secrets.JFROG_USERNAME}}
           JFROG_PASS: ${{secrets.JFROG_PASS}}
