--- a/.github/workflows/pushimage.yml
+++ b/.github/workflows/pushimage.yml
@@ -23,11 +23,10 @@ jobs:
       - name: build and push image
         working-directory: ./runner
         run: |
-          BRANCH=${GITHUB_REF##*/}
-          if [[ $BRANCH == "integration" ]]; then export TAG="integration"; fi
+          export BRANCH=${GITHUB_REF##*/}
           JFROG_BOT_USERNAME=$JFROG_USERNAME JFROG_BOT_PASS=$JFROG_PASS docker-compose build
-          docker tag splight-runner:latest $AWS_ECR/splight-runner:${TAG:-latest}
-          docker push $AWS_ECR/splight-runner:${TAG:-latest}
+          docker tag splight-runner:latest $AWS_ECR/splight-runner:${BRANCH}
+          docker push $AWS_ECR/splight-runner:${BRANCH}
         env:
           JFROG_USERNAME: ${{secrets.JFROG_USERNAME}}
           JFROG_PASS: ${{secrets.JFROG_PASS}}
