tag docker image for runner depending on branch (#20)
* Last 0.3 version

* tag docker image for runner depending on branch

* setting tag of runner image as the branch name

Co-authored-by: Matias Silva <matias.silva@splight-ae.com>

--- a/.github/workflows/pushimage.yml
+++ b/.github/workflows/pushimage.yml
@@ -2,6 +2,7 @@ name: Push ECR image
 on:
   push:
     branches:
+      - integration
       - master
 jobs:
   upload:
@@ -22,9 +23,10 @@ jobs:
       - name: build and push image
         working-directory: ./runner
         run: |
+          export BRANCH=${GITHUB_REF##*/}
           JFROG_BOT_USERNAME=$JFROG_USERNAME JFROG_BOT_PASS=$JFROG_PASS docker-compose build
-          docker tag splight-runner:latest $AWS_ECR/splight-runner:latest
-          docker push $AWS_ECR/splight-runner:latest
+          docker tag splight-runner:latest $AWS_ECR/splight-runner:${BRANCH}
+          docker push $AWS_ECR/splight-runner:${BRANCH}
         env:
           JFROG_USERNAME: ${{secrets.JFROG_USERNAME}}
           JFROG_PASS: ${{secrets.JFROG_PASS}}
