corrected version number and pipeline

--- a/.github/workflows/pushimage.yml
+++ b/.github/workflows/pushimage.yml
@@ -23,10 +23,11 @@ jobs:
       - name: build and push image
         working-directory: ./runner
         run: |
+          export VERSION=$(python setup.py --version)
           export BRANCH=${GITHUB_REF##*/}
           JFROG_BOT_USERNAME=$JFROG_USERNAME JFROG_BOT_PASS=$JFROG_PASS docker-compose build
-          docker tag splight-runner:latest $AWS_ECR/splight-runner:${BRANCH}
-          docker push $AWS_ECR/splight-runner:${BRANCH}
+          docker tag splight-runner:${VERSION} $AWS_ECR/splight-runner:${BRANCH}-${VERSION}
+          docker push $AWS_ECR/splight-runner:${BRANCH}-${VERSION}
         env:
           JFROG_USERNAME: ${{secrets.JFROG_USERNAME}}
           JFROG_PASS: ${{secrets.JFROG_PASS}}
