--- a/runner/Dockerfile
+++ b/runner/Dockerfile
@@ -9,4 +9,5 @@ RUN pip install splight-cli==0.2.4
 
 WORKDIR /code
 RUN mkdir /code/.config; cp -R /root/.config/pip /code/.config/pip
+COPY builder.py  /code
 COPY runner.py  /code
