--- a/.github/workflows/pushimage.yml
+++ b/.github/workflows/pushimage.yml
@@ -20,7 +20,7 @@ jobs:
       - name: Login to Amazon ECR
         id: login-ecr
         uses: aws-actions/amazon-ecr-login@v1
-      - name: build and push image
+      - name: build and push runner image
         working-directory: ./runner
         run: |
           export VERSION=$(python setup.py --version)
@@ -28,6 +28,14 @@ jobs:
           JFROG_BOT_USERNAME=$JFROG_USERNAME JFROG_BOT_PASS=$JFROG_PASS docker-compose build
           docker tag splight-runner:${VERSION} $AWS_ECR/splight-runner:${BRANCH}-${VERSION}
           docker push $AWS_ECR/splight-runner:${BRANCH}-${VERSION}
+      - name: build and push builder image
+        working-directory: ./builder
+        run: |
+          export VERSION=$(python setup.py --version)
+          export BRANCH=${GITHUB_REF##*/}
+          JFROG_BOT_USERNAME=$JFROG_USERNAME JFROG_BOT_PASS=$JFROG_PASS docker-compose build
+          docker tag splight-builder:${VERSION} $AWS_ECR/splight-builder:${BRANCH}-${VERSION}
+          docker push $AWS_ECR/splight-builder:${BRANCH}-${VERSION}
         env:
           JFROG_USERNAME: ${{secrets.JFROG_USERNAME}}
           JFROG_PASS: ${{secrets.JFROG_PASS}}
