changed script name in runner: builder.py > configure.py

--- a/builder/code/Dockerfile
+++ b/builder/code/Dockerfile
@@ -2,6 +2,6 @@ ARG RUNNER_IMAGE
 
 FROM $RUNNER_IMAGE
 
-ARG BUILD_SPEC
+ARG CONFIGURE_SPEC
 
-RUN builder.py -b $BUILD_SPEC
+RUN configure.py -c $CONFIGURE_SPEC
