--- a/builder/code/Dockerfile
+++ b/builder/code/Dockerfile
@@ -1,7 +1,6 @@
 ARG RUNNER_IMAGE
-
 FROM $RUNNER_IMAGE
+COPY configure.py configure.py
 
 ARG CONFIGURE_SPEC
-
-RUN configure.py -c $CONFIGURE_SPEC
+RUN python3 configure.py -c "$CONFIGURE_SPEC"
