--- a/builder/docker-compose.yml
+++ b/builder/docker-compose.yml
@@ -11,3 +11,5 @@ services:
         - AWS_SECRET_ACCESS_KEY=$AWS_SECRET_ACCESS_KEY
     command: bash
     tty: true
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock
