--- a/.github/workflows/libupload.yml
+++ b/.github/workflows/libupload.yml
@@ -1,10 +1,10 @@
-
 name: Upload library
 on:
   push:
     branches:
       - master
       - integration
+      - feature/prebuilt-images
 jobs:
   upload:
     runs-on: ubuntu-latest
