--- a/builder/code/Dockerfile
+++ b/builder/code/Dockerfile
@@ -3,4 +3,4 @@ FROM $RUNNER_IMAGE
 COPY configure.py configure.py
 
 ARG CONFIGURE_SPEC
-RUN python3 configure.py -c "$CONFIGURE_SPEC"
+RUN python configure.py -c "$CONFIGURE_SPEC"
