--- a/builder/Dockerfile
+++ b/builder/Dockerfile
@@ -1,6 +1,16 @@
 FROM docker:20.10.21-cli
 
-RUN apk update && apk add python3 py3-pip python3-dev curl unzip libpq-dev gcc build-base
+RUN apk update && \
+    apk add \
+    python3 \
+    py3-pip \
+    python3-dev \
+    curl \
+    unzip \
+    libpq-dev \
+    gcc \
+    build-base
+
 
 ARG JFROG_BOT_USERNAME
 ARG JFROG_BOT_PASS
@@ -11,10 +21,13 @@ COPY requirements.txt requirements.txt
 RUN pip install -r requirements.txt
 
 RUN curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip" && unzip awscliv2.zip && ./aws/install
+
 ARG AWS_ACCESS_KEY_ID
 ARG AWS_SECRET_ACCESS_KEY
-RUN mkdir -p ~/.aws
-RUN printf "[default]\naws_access_key_id = $AWS_ACCESS_KEY_ID\naws_secret_access_key = $AWS_SECRET_ACCESS_KEY" > ~/.aws/credentials
+
+ENV AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID}
+ENV AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY}
+
 
 RUN mkdir -p /code
 WORKDIR /code
