change repo for builder

--- a/.github/workflows/pushimage.yml
+++ b/.github/workflows/pushimage.yml
@@ -34,8 +34,8 @@ jobs:
           export VERSION=$(python setup.py --version)
           export BRANCH=${GITHUB_REF##*/}
           JFROG_BOT_USERNAME=$JFROG_USERNAME JFROG_BOT_PASS=$JFROG_PASS docker-compose build
-          docker tag splight-builder $AWS_ECR/splight-builder:${BRANCH}-${VERSION}
-          docker push $AWS_ECR/splight-builder:${BRANCH}-${VERSION}
+          docker tag splight-builder $AWS_ECR/splight-jobs:splight-builder-${BRANCH}-${VERSION}
+          docker push $AWS_ECR/splight-jobs:splight-builder-${BRANCH}-${VERSION}
         env:
           JFROG_USERNAME: ${{secrets.JFROG_USERNAME}}
           JFROG_PASS: ${{secrets.JFROG_PASS}}
