--- a/runner/Dockerfile
+++ b/runner/Dockerfile
@@ -3,9 +3,10 @@ RUN apt update && apt -y install libpq-dev gcc libczmq-dev librdkafka-dev git
 
 ARG JFROG_BOT_USERNAME
 ARG JFROG_BOT_PASS
+ARG VERSION
 
 RUN pip config set global.index-url https://$JFROG_BOT_USERNAME:$JFROG_BOT_PASS@splight.jfrog.io/artifactory/api/pypi/splight/simple
-RUN pip install splight-cli==0.2.4
+RUN pip install splight-cli==$VERSION
 
 WORKDIR /code
 RUN mkdir /code/.config; cp -R /root/.config/pip /code/.config/pip
