fix version in workflow

--- a/.github/workflows/pushbuilder.yml
+++ b/.github/workflows/pushbuilder.yml
@@ -23,7 +23,7 @@ jobs:
       - name: build and push builder image
         working-directory: ./builder
         run: |
-          export VERSION=$(python setup.py --version)
+          export VERSION=$(python ../setup.py --version)
           export BRANCH=${GITHUB_REF##*/}
           JFROG_BOT_USERNAME=$JFROG_USERNAME JFROG_BOT_PASS=$JFROG_PASS docker-compose build
           docker tag splight-builder $AWS_ECR/splight-jobs:splight-builder-${BRANCH}-${VERSION}
