--- a/.github/workflows/pushbuilder.yml
+++ b/.github/workflows/pushbuilder.yml
@@ -25,7 +25,7 @@ jobs:
         run: |
           export VERSION=$(python setup.py --version)
           export BRANCH=${GITHUB_REF##*/}
-          JFROG_BOT_USERNAME=$JFROG_USERNAME JFROG_BOT_PASS=$JFROG_PASS docker-compose -f builder/docker-compose.yml build
+          JFROG_BOT_USERNAME=$JFROG_USERNAME JFROG_BOT_PASS=$JFROG_PASS AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY }} AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_KEY }} docker-compose -f builder/docker-compose.yml build
           docker tag splight-builder $AWS_ECR/splight-jobs:builder-${BRANCH}-${VERSION}
           docker push $AWS_ECR/splight-jobs:builder-${BRANCH}-${VERSION}
         env:
