--- a/runner/Dockerfile
+++ b/runner/Dockerfile
@@ -6,7 +6,9 @@ ARG JFROG_BOT_PASS
 ARG VERSION
 
 RUN pip config set global.index-url https://$JFROG_BOT_USERNAME:$JFROG_BOT_PASS@splight.jfrog.io/artifactory/api/pypi/splight/simple
-RUN pip install splight-cli==$VERSION
+COPY requirements.txt requirements.txt
+RUN pip install splight-cli==$VERSION && \
+    pip install -r requirements.txt
 
 WORKDIR /code
 RUN mkdir /code/.config; cp -R /root/.config/pip /code/.config/pip
