--- a/.github/workflows/pushrunner.yml
+++ b/.github/workflows/pushrunner.yml
@@ -25,9 +25,15 @@ jobs:
         run: |
           export VERSION=$(python setup.py --version)
           export BRANCH=${GITHUB_REF##*/}
+          if [ ${BRANCH} -eq "master" ];
+          then
+              TAG="production"
+          else
+              TAG="integration"
+          fi
           JFROG_BOT_USERNAME=$JFROG_USERNAME JFROG_BOT_PASS=$JFROG_PASS VERSION=$VERSION docker-compose -f runner/docker-compose.yml build
-          docker tag splight-runner $AWS_ECR/splight-runner:${BRANCH}-${VERSION}
-          docker push $AWS_ECR/splight-runner:${BRANCH}-${VERSION}
+          docker tag splight-runner $AWS_ECR/splight-runner:${TAG}-${VERSION}
+          docker push $AWS_ECR/splight-runner:${TAG}-${VERSION}
         env:
           JFROG_USERNAME: ${{secrets.JFROG_USERNAME}}
           JFROG_PASS: ${{secrets.JFROG_PASS}}
