--- a/.github/workflows/pushrunner.yml
+++ b/.github/workflows/pushrunner.yml
@@ -25,12 +25,7 @@ jobs:
         run: |
           export VERSION=$(python setup.py --version)
           export BRANCH=${GITHUB_REF##*/}
-          if [ ${BRANCH} -eq "master" ];
-          then
-              export TAG="production"
-          else
-              export TAG="integration"
-          fi
+          if [ ${BRANCH} = "master" ]; then export TAG="production"; else export TAG="integration"; fi;
           JFROG_BOT_USERNAME=$JFROG_USERNAME JFROG_BOT_PASS=$JFROG_PASS VERSION=$VERSION docker-compose -f runner/docker-compose.yml build
           docker tag splight-runner $AWS_ECR/splight-runner:${TAG}-${VERSION}
           docker push $AWS_ECR/splight-runner:${TAG}-${VERSION}
