--- a/.github/workflows/libupload.yml
+++ b/.github/workflows/libupload.yml
@@ -4,6 +4,7 @@ on:
     branches:
       - master
       - integration
+      - feature/delete_jfrog # TODO: delete this line befor merge
 jobs:
   upload:
     runs-on: ubuntu-latest
