--- a/.github/workflows/pushbuilder.yml
+++ b/.github/workflows/pushbuilder.yml
@@ -26,10 +26,9 @@ jobs:
           export VERSION=$(python setup.py --version)
           export BRANCH=${GITHUB_REF##*/}
           if [ ${BRANCH} = "master" ]; then export TAG="production"; else export TAG="integration"; fi;
-          JFROG_BOT_USERNAME=$JFROG_USERNAME JFROG_BOT_PASS=$JFROG_PASS AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY }} AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_KEY }} docker-compose -f builder/docker-compose.yml build
+          GITHUB_TOKEN=$GITHUB_TOKEN AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY }} AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_KEY }} docker-compose -f builder/docker-compose.yml build
           docker tag splight-builder $AWS_ECR/splight-jobs:builder-${TAG}-${VERSION}
           docker push $AWS_ECR/splight-jobs:builder-${TAG}-${VERSION}
         env:
-          JFROG_USERNAME: ${{secrets.JFROG_USERNAME}}
-          JFROG_PASS: ${{secrets.JFROG_PASS}}
+          GITHUB_TOKEN: ${{secrets.APP_GITHUB_TOKEN}}
           AWS_ECR: ${{secrets.AWS_ECR}}
