--- a/builder/docker-compose.yml
+++ b/builder/docker-compose.yml
@@ -5,8 +5,7 @@ services:
     build:
       context: .
       args:
-        - JFROG_BOT_USERNAME=$JFROG_BOT_USERNAME
-        - JFROG_BOT_PASS=$JFROG_BOT_PASS
+        - GITHUB_TOKEN=$GITHUB_TOKEN
         - AWS_ACCESS_KEY_ID=$AWS_ACCESS_KEY_ID
         - AWS_SECRET_ACCESS_KEY=$AWS_SECRET_ACCESS_KEY
     command: bash
