--- a/builder/requirements.txt
+++ b/builder/requirements.txt
@@ -1,3 +1,3 @@
-docker==6.0.0
+git+https://github.com/splightplatform/docker-py.git@main
 git+https://${GITHUB_TOKEN}@github.com/splightplatform/splight-lib-private.git@0.5.40
 typer==0.6.1
