--- a/.github/workflows/pushrunner.yml
+++ b/.github/workflows/pushrunner.yml
@@ -24,6 +24,7 @@ jobs:
         uses: nick-fields/retry@v2
         with:
           max_attempts: 2
+          timeout_minutes: 10
           retry_wait_seconds: 60
           command: |
             export VERSION=$(python setup.py --version)
