--- a/.github/workflows/pushbuilder.yml
+++ b/.github/workflows/pushbuilder.yml
@@ -2,7 +2,6 @@ name: Push builder image to ECR
 on:
   push:
     branches:
-      - integration
       - master
 jobs:
   upload:
@@ -24,11 +23,9 @@ jobs:
         working-directory: .
         run: |
           export VERSION=$(python setup.py --version)
-          export BRANCH=${GITHUB_REF##*/}
-          if [ ${BRANCH} = "master" ]; then export TAG="production"; else export TAG="integration"; fi;
           GITHUB_TOKEN=$GITHUB_TOKEN AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY }} AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_KEY }} docker-compose -f builder/docker-compose.yml build
-          docker tag splight-builder $AWS_ECR/splight-jobs:builder-${TAG}-${VERSION}
-          docker push $AWS_ECR/splight-jobs:builder-${TAG}-${VERSION}
+          docker tag splight-builder $AWS_ECR/splight-jobs:builder-${VERSION}
+          docker push $AWS_ECR/splight-jobs:builder-${VERSION}
         env:
           GITHUB_TOKEN: ${{secrets.APP_GITHUB_TOKEN}}
           AWS_ECR: ${{secrets.AWS_ECR}}
