--- a/.github/workflows/pushrunner.yml
+++ b/.github/workflows/pushrunner.yml
@@ -1,9 +1,5 @@
 name: Push runner image to ECR
-on:
-  push:
-    branches:
-      - integration
-      - master
+on: repository_dispatch
 jobs:
   upload:
     runs-on: ubuntu-latest
@@ -28,10 +24,8 @@ jobs:
           retry_wait_seconds: 600
           command: |
             export VERSION=$(python setup.py --version)
-            export BRANCH=${GITHUB_REF##*/}
-            if [ ${BRANCH} = "master" ]; then export TAG="production"; else export TAG="integration"; fi;
             VERSION=$VERSION docker-compose -f runner/docker-compose.yml build
-            docker tag splight-runner $AWS_ECR/splight-runner:${TAG}-${VERSION}
-            docker push $AWS_ECR/splight-runner:${TAG}-${VERSION}
+            docker tag splight-runner $AWS_ECR/splight-runner:${VERSION}
+            docker push $AWS_ECR/splight-runner:${VERSION}
         env:
           AWS_ECR: ${{ secrets.AWS_ECR }}
