--- a/.github/workflows/pushrunner.yml
+++ b/.github/workflows/pushrunner.yml
@@ -17,15 +17,11 @@ jobs:
         id: login-ecr
         uses: aws-actions/amazon-ecr-login@v1
       - name: build and push runner image
-        uses: nick-fields/retry@v2
-        with:
-          max_attempts: 2
-          timeout_minutes: 10
-          retry_wait_seconds: 600
-          command: |
-            export VERSION=$(python setup.py --version)
-            VERSION=$VERSION docker-compose -f runner/docker-compose.yml build
-            docker tag splight-runner $AWS_ECR/splight-runner:${VERSION}
-            docker push $AWS_ECR/splight-runner:${VERSION}
+        working-directory: .
+        run: |
+          export VERSION=$(python setup.py --version)
+          VERSION=$VERSION docker-compose -f runner/docker-compose.yml build
+          docker tag splight-runner $AWS_ECR/splight-runner:${VERSION}
+          docker push $AWS_ECR/splight-runner:${VERSION}
         env:
-          AWS_ECR: ${{ secrets.AWS_ECR }}
+          AWS_ECR: ${{secrets.AWS_ECR}}
