--- a/.github/workflows/pr-check_version.yml
+++ b/.github/workflows/pr-check_version.yml
@@ -1,12 +1,12 @@
-name: "Running Tests"
+name: "Checking version upgrade"
 on:
   pull_request:
     branches:
       - '**'
 jobs:
-  tests:
+  check_version:
     runs-on: ubuntu-latest
-    name: running tests
+    name: checking version
     steps:
       - name: Check out repository code
         uses: actions/checkout@v3
@@ -15,5 +15,4 @@ jobs:
         with:
           python-version: '3.8'
       - run: pip install -r requirements.txt
-      - run: python setup.py install
-      - run: pytest .
+      - run: python .github/workflows/check_version.py
