add branch comparison

--- a/.github/workflows/pr-check_version.yml
+++ b/.github/workflows/pr-check_version.yml
@@ -6,9 +6,9 @@ on:
     branches:
       - '**'
 jobs:
-  check_version:
+  check_pypi_version:
     runs-on: ubuntu-latest
-    name: checking version
+    name: checking pypi version
     steps:
       - name: Check out repository code
         uses: actions/checkout@v3
@@ -17,4 +17,21 @@ jobs:
         with:
           python-version: '3.8'
       - run: pip install -r requirements.txt
-      - run: python .github/workflows/check_version.py
+      - run: python .github/workflows/check_pypi_version.py
+
+  check_branch_version:
+    runs-on: ubuntu-latest
+    name: checking branch version
+    steps:
+      - name: Extract branch name
+        shell: bash
+        run: echo "branch=$(echo ${GITHUB_REF#refs/heads/})" >>$GITHUB_OUTPUT
+        id: extract_branch
+      - name: Check out repository code
+        uses: actions/checkout@v3
+      - name: Set up Python
+        uses: actions/setup-python@v3
+        with:
+          python-version: '3.8'
+      - run: pip install -r requirements.txt
+      - run: python .github/workflows/check_branch_version.py ${{ steps.extract_branch.outputs.branch }}
