--- a/.github/workflows/pr-check_version.yml
+++ b/.github/workflows/pr-check_version.yml
@@ -27,12 +27,10 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Get current branch name
-        run: 
-          export CURRENT_BRANCH=${{ github.event.pull_request.head.ref }}
-          echo $CURRENT_BRANCH
+        run: echo "CURRENT_BRANCH=${{ github.event.pull_request.head.ref }}" >> $GITHUB_ENV
 
       - name: Get version from current branch
-        run: export BRANCH_VERSION=$(grep -Eo '__version__ = \"[^\"]+\"' cli/version.py | awk -F'"' '{ print $2 }')BRANCH_VERSION=$(grep -Eo '__version__ = \"[^\"]+\"' cli/version.py | awk -F'"' '{ print $2 }')
+        run: echo "BRANCH_VERSION=$(grep -Eo '__version__ = \"[^\"]+\"' cli/version.py | awk -F'"' '{ print $2 }')BRANCH_VERSION=$(grep -Eo '__version__ = \"[^\"]+\"' cli/version.py | awk -F'"' '{ print $2 }')
 
       - name: Checkout master branch
         run: git fetch; git checkout master
@@ -41,7 +39,7 @@ jobs:
         run: echo "MASTER_VERSION=$(grep -Eo '__version__ = \"[^\"]+\"' cli/version.py | awk -F'"' '{ print $2 }')" >> $GITHUB_ENV
 
       - name: Checkout current branch
-        run: git checkout $CURRENT_BRANCH
+        run: git checkout feature/check_package_version
 
       - name: Set up Python
         uses: actions/setup-python@v3
