--- a/.github/workflows/pr-check_version.yml
+++ b/.github/workflows/pr-check_version.yml
@@ -30,7 +30,7 @@ jobs:
         run: echo "CURRENT_BRANCH=${{ github.event.pull_request.head.ref }}" >> $GITHUB_ENV
 
       - name: Get version from current branch
-        run: echo "BRANCH_VERSION=$(grep -Eo '__version__ = \"[^\"]+\"' cli/version.py | awk -F'"' '{ print $2 }')BRANCH_VERSION=$(grep -Eo '__version__ = \"[^\"]+\"' cli/version.py | awk -F'"' '{ print $2 }')
+        run: echo "BRANCH_VERSION=$(grep -Eo '__version__ = \"[^\"]+\"' cli/version.py | awk -F'"' '{ print $2 }')" >> $GITHUB_ENV
 
       - name: Checkout master branch
         run: git fetch; git checkout master
