--- a/.github/workflows/pr-check_version.yml
+++ b/.github/workflows/pr-check_version.yml
@@ -1,49 +1,63 @@
-name: "Checking version upgrade"
+name: "Ensure version upgrade"
 on:
   pull_request:
     types:
       [opened, synchronize]
     branches:
-      - '**'
+      - 'feature/*'
 jobs:
-  check_pypi_version:
+  verify_pypi_version:
     runs-on: ubuntu-latest
-    name: checking pypi version
+    name: Verify version is higher than the PyPi package
     steps:
-      - name: Check out repository code
+      - name: Check out to {{ GITHUB_REF }}
         uses: actions/checkout@v3
-      - name: Set up Python
-        uses: actions/setup-python@v3
-        with:
-          python-version: '3.8'
-      - run: pip install -r requirements.txt
-      - run: python .github/workflows/check_pypi_version.py
-
-  check_branch_version:
-    runs-on: ubuntu-latest
-
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
-
-      - name: Get current branch name
-        run: echo "CURRENT_BRANCH=${{ github.event.pull_request.head.ref }}" >> $GITHUB_ENV
-
-      - name: Get version from current branch
-        run: echo "BRANCH_VERSION=$(grep -Eo '__version__ = \"[^\"]+\"' cli/version.py | awk -F'"' '{ print $2 }')" >> $GITHUB_ENV
-
-      - name: Checkout master branch
-        run: git fetch; git checkout master
-
-      - name: Get version from master branch
-        run: echo "MASTER_VERSION=$(grep -Eo '__version__ = \"[^\"]+\"' cli/version.py | awk -F'"' '{ print $2 }')" >> $GITHUB_ENV
-
-      - name: Checkout current branch
-        run: git checkout feature/check_package_version
 
       - name: Set up Python
         uses: actions/setup-python@v3
         with:
           python-version: '3.8'
-      - run: pip install -r requirements.txt
-      - run: python .github/workflows/check_branch_version.py ${{ github.MASTER_VERSION }} ${{ github.BRANCH_VERSION}}
+
+      - name: Install requirements
+        run: pip install -r requirements.txt
+
+      - name: Run script
+        run: python .github/workflows/scripts/check_pypi_version.py "cli/version.py" "splight-cli"
+#
+#
+#
+#
+#
+#
+#
+#
+#
+#
+#  verify_branch_version:
+#    runs-on: ubuntu-latest
+#
+#    steps:
+#      - name: Check out to {{ GITHUB_REF }}
+#        uses: actions/checkout@v3
+#
+#      - name: Get version
+#        run: echo "VERSION=$(grep -Eo '__version__ = \"[^\"]+\"' cli/version.py | awk -F'"' '{ print $2 }')" >> $GITHUB_ENV
+#
+#      - name: Check out to master
+#        uses: actions/checkout@v3
+#        with:
+#          ref: master
+#
+#      - name: Get version from master branch
+#        run: echo "MASTER_VERSION=$(grep -Eo '__version__ = \"[^\"]+\"' cli/version.py | awk -F'"' '{ print $2 }')" >> $GITHUB_ENV
+#
+#      - name: Checkout current branch
+#        run: git checkout feature/check_package_version
+#
+#      - name: Set up Python
+#        uses: actions/setup-python@v3
+#        with:
+#          python-version: '3.8'
+#      - run: pip install -r requirements.txt
+#      - run: python .github/workflows/scripts/check_branch_version.py ${{ github.MASTER_VERSION }} ${{ github.BRANCH_VERSION}}
+#
