--- a/.github/workflows/pr-version.yml
+++ b/.github/workflows/pr-version.yml
@@ -8,7 +8,7 @@ on:
 jobs:
   verify_pypi_version:
     runs-on: ubuntu-latest
-    name: Verify version is newer than PyPi package
+    name: Verify version is higher than PyPi package
     steps:
       - name: Check out to {{ GITHUB_REF }}
         uses: actions/checkout@v3
@@ -26,6 +26,7 @@ jobs:
 
   verify_branch_version:
     runs-on: ubuntu-latest
+    name: Verify version is higher than master
     steps:
       - name: Check out to master
         uses: actions/checkout@v3
@@ -38,7 +39,7 @@ jobs:
       - name: Check out to {{ GITHUB_REF }}
         uses: actions/checkout@v3
 
-      - name: Get version
+      - name: Get version from feature branch
         run: echo "BRANCH_VERSION=$(grep -Eo '__version__ = \"[^\"]+\"' cli/version.py | awk -F'"' '{ print $2 }')" >> "$GITHUB_ENV"
 
       - name: Set up Python
@@ -50,4 +51,4 @@ jobs:
         run: pip install -r .github/workflows/scripts/requirements.txt
 
       - name: Run script
-        run: python .github/workflows/scripts/check_branch_version.py ${{ env.MASTER_VERSION }} ${{ env.BRANCH_VERSION}}
+        run: python .github/workflows/scripts/check_branch_version.py ${{ env.MASTER_VERSION }} ${{ env.BRANCH_VERSION }}
