--- a/.github/workflows/developer.yaml
+++ b/.github/workflows/developer.yaml
@@ -22,14 +22,14 @@ jobs:
           ref: master
 
       - name: Get version from master branch
-        run: echo "MASTER_VERSION=$(grep -E 'version' setup.py | awk -F'"' '{ print $2 }')" >> "$GITHUB_ENV"
+        run: echo "MASTER_VERSION=$(grep -E 'version' cli/version.py | awk -F'"' '{ print $2 }')" >> "$GITHUB_ENV"
 
       # get current branch version
       - name: Checkout to feature branch
         uses: actions/checkout@v3
 
       - name: Get version from feature branch
-        run: echo "CURRENT_VERSION=$(grep -E 'version' setup.py | awk -F'"' '{ print $2 }')" >> "$GITHUB_ENV"
+        run: echo "CURRENT_VERSION=$(grep -E 'version' cli/version.py | awk -F'"' '{ print $2 }')" >> "$GITHUB_ENV"
 
       - name: Set up Python
         uses: actions/setup-python@v3
@@ -52,7 +52,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Get version from feature branch
-        run: echo "CURRENT_VERSION=$(grep -E 'version' setup.py | awk -F'"' '{ print $2 }')" >> "$GITHUB_ENV"
+        run: echo "CURRENT_VERSION=$(grep -E 'version' cli/version.py | awk -F'"' '{ print $2 }')" >> "$GITHUB_ENV"
 
       - name: Build package
         run: python setup.py sdist bdist_wheel
