--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -19,7 +19,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Get version from feature branch
-        run: echo "CURRENT_VERSION=$(grep -E 'version' setup.py | awk -F'"' '{ print $2 }')" >> "$GITHUB_ENV"
+        run: echo "CURRENT_VERSION=$(grep -E 'version' cli/version.py | awk -F'"' '{ print $2 }')" >> "$GITHUB_ENV"
 
       - name: Create tag
         uses: actions/create-release@v1
@@ -59,7 +59,7 @@ jobs:
         run: pip install -r .github/workflows/scripts/requirements.txt
 
       - name: Get version from feature branch
-        run: echo "CURRENT_VERSION=$(grep -E 'version' setup.py | awk -F'"' '{ print $2 }')" >> "$GITHUB_ENV"
+        run: echo "CURRENT_VERSION=$(grep -E 'version' cli/version.py | awk -F'"' '{ print $2 }')" >> "$GITHUB_ENV"
 
       - name: Remove all developer versions from pypi
         run: python .github/workflows/scripts/cleanup_pypi.py $LIBRARY_NAME ${{ env.CURRENT_VERSION }} ${{ secrets.PYPI_USERNAME }} ${{ secrets.PYPI_PASSWORD}}
