--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -96,6 +96,7 @@ jobs:
   upload_runner_image:
     runs-on: ubuntu-latest
     name: Push runner image to ECR
+    needs: upload_release_to_pypi
     steps:
       - name: Checkout to feature branch
         uses: actions/checkout@v3
@@ -110,6 +111,10 @@ jobs:
       - name: Login to Amazon ECR
         id: login-ecr
         uses: aws-actions/amazon-ecr-login@v1
+
+      # TODO: research about this problem to fix it
+      - name: Sleep 30 seconds because pypi sometimes have delay
+        run: sleep 30
 
       - name: Build and push runner image
         working-directory: .
