--- a/builder/requirements.txt
+++ b/builder/requirements.txt
@@ -1,3 +1,4 @@
-git+https://github.com/splightplatform/docker-py.git@main
-git+https://${GITHUB_TOKEN}@github.com/splightplatform/splight-lib-private.git@2.0.15
 typer==0.6.1
+docker==6.1.3
+pydantic==1.10.2
+boto3==1.28.12
