--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -19,7 +19,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Get version from feature branch
-        run: echo "CURRENT_VERSION=$(grep -E 'version' cli/version.py | awk -F'"' '{ print $2 }')" >> "$GITHUB_ENV"
+        run: echo "CURRENT_VERSION=$(grep -E 'version' cli/version.py | awk -F'\"' '{ print $2 }')" >> "$GITHUB_ENV"
 
       - name: Create tag
         uses: softprops/action-gh-release@v1
@@ -63,36 +63,3 @@ jobs:
 
       - name: Remove all developer versions from pypi
         run: python .github/workflows/scripts/cleanup_pypi.py $LIBRARY_NAME ${{ env.CURRENT_VERSION }} ${{ secrets.PYPI_USERNAME }} ${{ secrets.PYPI_PASSWORD}}
-
-  upload_runner_image:
-    runs-on: ubuntu-latest
-    name: Push runner image to ECR
-    needs: upload_release_to_pypi
-    steps:
-      - name: Checkout to feature branch
-        uses: actions/checkout@v3
-
-      - name: Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@v1
-        with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_KEY }}
-          aws-region: us-east-1
-
-      - name: Login to Amazon ECR
-        id: login-ecr
-        uses: aws-actions/amazon-ecr-login@v1
-
-      # TODO: research about this problem to fix it
-      - name: Sleep 30 seconds because pypi sometimes have delay
-        run: sleep 30
-
-      - name: Build and push runner image
-        working-directory: .
-        run: |
-          export VERSION=$(python setup.py --version)
-          VERSION=$VERSION docker-compose -f runner/docker-compose.yml build
-          docker tag splight-runner $AWS_ECR/splight-runner:${VERSION}
-          docker push $AWS_ECR/splight-runner:${VERSION}
-        env:
-          AWS_ECR: ${{secrets.AWS_ECR}}
