--- a/builder/Dockerfile
+++ b/builder/Dockerfile
@@ -3,4 +3,5 @@ FROM $RUNNER_IMAGE
 COPY configure.py configure.py
 
 ARG CONFIGURE_SPEC
+RUN pip install splight-cli==${SPLIGHT_CLI_VERSON}
 RUN python configure.py -c "$CONFIGURE_SPEC"
