--- a/builder/Dockerfile
+++ b/builder/Dockerfile
@@ -1,13 +1,12 @@
 ARG RUNNER_IMAGE
 FROM $RUNNER_IMAGE
 COPY configure.py configure.py
-COPY install_requirements.py install_requirements.py
+COPY manager.py manager.py
+COPY configure_requirements.txt configure_requirements.txt
 
 ENV AWS_ACCESS_KEY_ID=
 ENV AWS_SECRET_ACCESS_KEY=
 
-RUN pip install boto3
-RUN pip install py7zr
-RUN pip install typing
+RUN pip install -r configure_requirements.txt
 ARG CONFIGURE_SPEC
 RUN python3 configure.py -c "$CONFIGURE_SPEC"
