improve aws keys handling

--- a/builder/Dockerfile
+++ b/builder/Dockerfile
@@ -4,8 +4,8 @@ COPY configure.py configure.py
 COPY manager.py manager.py
 COPY configure_requirements.txt configure_requirements.txt
 
-ENV AWS_ACCESS_KEY_ID=
-ENV AWS_SECRET_ACCESS_KEY=
+ARG AWS_ACCESS_KEY_ID
+ARG AWS_SECRET_ACCESS_KEY
 
 RUN pip install -r configure_requirements.txt
 ARG CONFIGURE_SPEC
