--- a/builder/requirements.txt
+++ b/builder/requirements.txt
@@ -1,6 +1,5 @@
 typer==0.6.1
 docker==6.1.3
-pydantic==1.10.2
-boto3==1.28.12
+boto3==1.28.66
 furl==2.1.3
-requests==2.26.0
+splight_lib_internal[webhook]==0.2.8
