modularize to configure folder

--- a/builder/Dockerfile
+++ b/builder/Dockerfile
@@ -1,11 +1,11 @@
 ARG RUNNER_IMAGE
 FROM $RUNNER_IMAGE
-COPY configure.py configure.py
-COPY manager.py manager.py
-COPY configure_requirements.txt configure_requirements.txt
+COPY /configure/ /configure/
+WORKDIR /configure/
 
 ARG AWS_ACCESS_KEY_ID
 ARG AWS_SECRET_ACCESS_KEY
+ARG S3_BUCKET_NAME
 
 RUN pip install -r configure_requirements.txt
 ARG CONFIGURE_SPEC
