--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,6 +39,7 @@ build-backend = "poetry.core.masonry.api"
 
 [tool.black]
 line-length = 79
+force-exclude = ".*/component/templates/.*py"
 
 [tool.isort]
 profile = "black"
