--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -21,7 +21,7 @@ jobs:
       - name: Get version from feature branch
         run: |
           if [ -f "setup.py" ]; then
-            echo "CURRENT_VERSION=$(grep -E 'version' setup.py | awk -F'\"' '{ print $2 }')" >> "$GITHUB_ENV"
+            echo "CURRENT_VERSION=$(grep -E 'version' cli/version.py | awk -F'\"' '{ print $2 }')" >> "$GITHUB_ENV"
           else
             echo "CURRENT_VERSION=$(grep version pyproject.toml | awk '{print $3}' | tr -d '\"')" >> "$GITHUB_ENV"
           fi
@@ -74,7 +74,7 @@ jobs:
       - name: Get version from feature branch
         run: |
           if [ -f "setup.py" ]; then
-            echo "CURRENT_VERSION=$(grep -E 'version' setup.py | awk -F'\"' '{ print $2 }')" >> "$GITHUB_ENV"
+            echo "CURRENT_VERSION=$(grep -E 'version' cli/version.py | awk -F'\"' '{ print $2 }')" >> "$GITHUB_ENV"
           else
             echo "CURRENT_VERSION=$(grep version pyproject.toml | awk '{print $3}' | tr -d '\"')" >> "$GITHUB_ENV"
           fi
