feat: set entrypoint to component image

--- a/splight_cli/hub/component/resources/Dockerfile
+++ b/splight_cli/hub/component/resources/Dockerfile
@@ -17,3 +17,5 @@ RUN python installer.py --name ${COMPONENT_NAME} --version ${COMPONENT_VERSION}
 
 # Cleaning up files
 RUN rm installer.py Dockerfile
+
+ENTRYPOINT ["splight-runner", "run-component"]
