--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,7 @@ case-converter = "1.1.0"
 click = "8.0.4"
 click-default-group = "1.2.2"
 setuptools = "70.0.0"
-splight-lib = "5.14.3"
+splight-lib = "^5.14.3"
 py7zr = "0.20.8"
 typer = "0.15.1"
 colorama = "0.4.4"
